Crash Geometry Nodes Point Instance on Text object in disabled collection #88250

Closed
opened 2021-05-13 09:18:56 +02:00 by Blake · 8 comments

System Information
Operating system: Linux-5.12.2-arch1-1-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.27

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-12 18:18, hash: 5368859a66
Worked: (newest version of Blender that worked as expected)
Caused by 22574f741c

Short description of error
Crash Geometry Nodes Point Instance on Text object in disabled collection

Exact steps for others to reproduce the error

  1. In new project create collection
  2. Add text to this collection
  3. Add geometry nodes to the cube
  4. Add Point Instance and pick Text as a Object
  5. Disable collection with text (Exclude from View Layer)
  6. Save the file
  7. Close and open it again.
    Crash.

It will not crash if you pick Text before you disable the collection. Then if you disable collection and save the file it will crash on startup (happens to me on bigger project).

**System Information** Operating system: Linux-5.12.2-arch1-1-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.27 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-12 18:18, hash: `5368859a66` Worked: (newest version of Blender that worked as expected) Caused by 22574f741c **Short description of error** Crash Geometry Nodes Point Instance on Text object in disabled collection **Exact steps for others to reproduce the error** 1. In new project create collection 2. Add text to this collection 3. Add geometry nodes to the cube 4. Add Point Instance and pick Text as a Object 5. Disable collection with text (Exclude from View Layer) 6. Save the file 7. Close and open it again. Crash. It will not crash if you pick Text before you disable the collection. Then if you disable collection and save the file it will crash on startup (happens to me on bigger project).
Author

Added subscriber: @dearzhen-3

Added subscriber: @dearzhen-3
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce the crash for version 3.0.0, hash: 0061150e4c.
Steps would be little different to reproduce the crash because once collection is excluded, it is not possible to pick any object from that collection

Not so sure sure about the tag (EEVEE & Viewport ?) but crash occurs in draw_cache_impl_curve.c due to NULL pointer.

I can reproduce the crash for version 3.0.0, hash: `0061150e4c`. Steps would be little different to reproduce the crash because once collection is excluded, it is not possible to pick any object from that collection Not so sure sure about the tag (`EEVEE & Viewport` ?) but crash occurs in `draw_cache_impl_curve.c` due to NULL pointer.
Member

bisecting says the crash caused by 22574f741c

bisecting says the crash caused by 22574f741c
Member

Regression and crash. So marking it as a high priority.

Regression and crash. So marking it as a high priority.
Jacques Lucke was assigned by Dalai Felinto 2021-05-25 16:24:14 +02:00

This issue was referenced by ba5b4d1bd6

This issue was referenced by ba5b4d1bd68e8b9a12279d8be9e6d84f496bd44b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88250
No description provided.